Ajout d'un champ Category dans les fichiers description
git-svn-id: svn://scm.gforge.inria.fr/svnroot/coq-contribs/trunk@776 0cf17b13-060f-0410-b1b1-c666bec9822a

--- a/description
+++ b/description
@@ -8,3 +8,4 @@ Description: This contribution contains a proof of correctness
 Keywords: correctness reals arithmetic
 Version: 7.3
 
+Category: Mathematics/Arithmetic and Number Theory/Real numbers
