Mise à jour des fichiers description (principalement des mots clés)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/coq-contribs/trunk@786 0cf17b13-060f-0410-b1b1-c666bec9822a

--- a/description
+++ b/description
@@ -5,7 +5,7 @@ Institution: LRI, Université Paris Sud
 Description: This contribution contains a proof of correctness 
   of some exact real arithmetic algorithms from the PhD thesis of
   Valérie Ménissier-Morain
-Keywords: correctness reals arithmetic
+Keywords: correctness, real numbers, arithmetic
 Version: 7.3
 
 Category: Mathematics/Arithmetic and Number Theory/Real numbers
